Ensure long game URL does not overflow the page width

--- a/app/assets/stylesheets/scrabble_with_friends/application.css
+++ b/app/assets/stylesheets/scrabble_with_friends/application.css
@@ -7,6 +7,7 @@ body{
   background-color: var(--body-bg-color);
   padding-bottom: 20px;
   padding-top: calc(var(--navbar-height) + 20px);
+  word-break: break-word;
 }
 
 a{
